# opcua-asset-mapper

./: .gitignore  mapper.py  requirements.txt
server/: pyproject.toml
server/src/: app.py  opcua.py
ui/: angular.json  package-lock.json  package.json  proxy.angular.json  tsconfig.json
ui/src/: index.html  styles.scss
ui/src/app/: app.component.html  app.component.ts  app.module.ts
ui/src/app/models/: address-space.ts
ui/src/app/opc-ua-address-space/: opc-ua-address-space.component.html  opc-ua-address-space.component.scss  opc-ua-address-space.component.spec.ts  opc-ua-address-space.component.ts
ui/src/app/opc-ua-connection/: opc-ua-connection.component.html  opc-ua-connection.component.spec.ts  opc-ua-connection.component.ts
ui/src/app/services/: opcua-connection.service.spec.ts  opcua-connection.service.ts
ui/src/assets/: address-space.json
