[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Darien Pardinas Diaz <dpar39@gmail.com>"]
readme = "README.md"
packages = [{include = "server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
